# openwebui-edge-gateway

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml
docs/: 00-contesto-iniziale.md
docs/archivio/: 01-evoluzione-edge-gateway.md  README.md
docs/bips/: BIP-001-proxy-full-routing-be.md  BIP-002-box-upload-intercept.md  BIP-003-proxy-upload-bridge-be-opc.md  BIP-004-box-file-metadata-correlation-without-box-code.md  BIP-005-openwebui-edge-gateway-scope.md  BIP-006-edge-gateway-phase1-implementation-plan.md  BIP-007-dynamic-models-proxy-from-be.md  README.md
docs/bips/references/: BE-openapi-uploads-schemas.json  BE-openapi-uploads.md  swagger-backend.json
docs/documentazione/: 01-flusso-dati-edge-gateway.md  02-modifiche-vps-rollout.md  03-verifica-allineamento-software.md  README.md  json-response.json
function/: openclaw_session_bridge.py
openclaw_openai_proxy/: __init__.py  backend.py  config.py  gateway.py  main.py  server.py  settings.py
openwebui/: openclaw-connection.yaml
pipelines/: openclaw_session_filter.py
